# CustomNewDelete

./: CMakeLists.txt  Readme.md  main.cpp
foo/: CMakeLists.txt  foo.cpp  libfoo.version  new.cpp
